--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
 <body>
     <div id="root"></div>
-    <script src="./src/index.js"></script>
+    <script src="./src/index2.js"></script>
 </body>
 
 </html>
